fix overflow and add subtitle

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   font-family: 'Kanit', sans-serif;
   display: flex;
   justify-content: center;
@@ -16,14 +17,22 @@ body {
   padding: 1rem;
 }
 
-.container {
+#subtitle{
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  margin-top: -25px;
+}
+
+.container {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e7e7e7;
   padding: 1rem 2rem;
   border-radius: 1rem;
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0 8px 12px rgba(0, 0, 0, 0.25); */
   border: 2px solid #666666;
   z-index: 2;
 }
@@ -73,7 +82,7 @@ ul {
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: #dddddd;
+  background-color: white;
   color: black;
   font-size: 1.9rem;
   font-weight: bold;
